--- a/portfolio/templates/portfolio/contact.html
+++ b/portfolio/templates/portfolio/contact.html
@@ -17,17 +17,17 @@
         <br>
 
         <h5 style="color:white">Subject:</h5>
-        <input style="width: 50%;border-radius: 5px;background-color: #404040;color: white;border: 2px solid #737373;"type="text" name="subject" maxlength="100" class="textinput textInput" id="id_subject" value="">
+        <input style="width: 50%;border-radius: 5px;background-color: #404040;color: white;border: 1px solid #0d6370;"type="text" name="subject" maxlength="100" class="textinput textInput" id="id_subject" value="">
         <br>
         <br>
 
         <h5 style="color:white">Email:</h5>
-        <input style="width: 50%;border-radius: 5px;background-color: #404040;border: 2px solid #737373;color: white;"type="text" name="sender" maxlength="100" class="textinput textInput" id="id_sender" value="">
+        <input style="width: 50%;border-radius: 5px;background-color: #404040;border: 1px solid #0d6370;color: white;"type="text" name="sender" maxlength="100" class="textinput textInput" id="id_sender" value="">
         <br>
         <br>
         <h5 style="color:white">Message:</h5>
 
-        <textarea style="border-radius: 5px;width: 100%;background-color: #404040;color: white;border: 2px solid #737373;"name="message" cols="30" rows="10" maxlength="1499" class="textarea" id="id_message"></textarea>
+        <textarea style="border-radius: 5px;width: 100%;background-color: #404040;color: white;border: 1px solid #0d6370;"name="message" cols="30" rows="10" maxlength="1499" class="textarea" id="id_message"></textarea>
         <br>
         <h1 ></h1>
         <center>
