--- a/nc/templates/nc/index.html
+++ b/nc/templates/nc/index.html
@@ -10,19 +10,19 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<div class="zoomParticle"style="opacity:.04;z-index:-10000"></div>
+<div class="zoomParticle"style="opacity:.1;z-index:-10000"></div>
 
 
 
 </div>
     <title>Number Classifier!</title>
-        <div class="col-md-6"style="color: white;margin-left: auto;margin-right:auto;">
+        <div class="col-md-6"style="color: white;margin-left: auto;margin-right:auto;  overflow-x: hidden;position: relative;;
+        overflow-y: hidden;">
             <center>
             <h1 id="num" >
-            Number Classifier! <i style="font-size: 0.8em; color:#17a2b8" class="fa fa-solid fa-feather"></i>
+            Draw a number! <i style="font-size: 0.8em; color:#17a2b8" class="fa fa-solid fa-feather"></i>
             </h1>
             <div id="table" class=""style="height: 100%;"></div>
-            <div id="loading">Draw a number!</div>
             <div class="wavee"id="loadingIcon">
                 <div class="wave"></div>
                 <div class="wave"></div>
